2007-11-08  Robert Ancell  <robert.ancell@gmail.com>

	* lib/main.py: If no game on startup start default game of human vs AI (Bug #446950)

2007-11-02  Robert Ancell  <robert.ancell@gmail.com>

	* Show threatened squares and pieces able to be taken (Bug #471409)
        * lib/chess/pgn.py: Handle carriage returns in PGN files

2007-10-23  Robert Ancell  <robert.ancell@gmail.com>

	* glchess.in: Display error dialog and quit if unable to import glchess.glchess (Bug #412690)

2007-10-22  Robert Ancell  <robert.ancell@gmail.com>

	* lib/glchess.py: Catch and ignore all exceptions writing to stdout (Bug #426461)
	* lib/ai.py: Catch exception killing AI (Bug #456829)
	* lib/gtkui/dialogs.py: Fix exception when autoloading games with invalid AIs (Bug #486254)
	* lib/gtkui/gtkui.py, glchess.in: Moved pygtk.require() to glchess.in so it is always called first (Bug #483556)

2007-10-21  Robert Ancell  <robert.ancell@gmail.com>

	* Added tests/ dir containing PGN test files
	* lib/chess/lan.py, pgn.py: Add better support for informal PGN files (Bug #488244)
	* lib/gtkui/dialogs.py: GtkFileChooser.get_current_folder() can return None, handle this case (Bug #488244)
	* lib/scene/opengl/texture.py: Catch GLU exception building mipmaps and fallback to standard textures (Bug #442933)

2007-10-07  Robert Ancell  <robert.ancell@gmail.com>

	* Disable navigation buttons when at start/end of moves (Bug #440920)

2007-10-06  Robert Ancell  <robert.ancell@gmail.com>

	* Merged glchess-ggz branch to give glchess initial ggz support	 (Bug #392280)
	* Removed tab support and added game history support (no UI yet)
	* Added ability to resign and claim draws
	* Reworked some strings that were hard to translate (Bug #475555)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/main.py: Resolve a startup crasher bug in glChess, by
	reverting the invalid class. (Bug #471238)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>
