@@ -169,7 +169,7 @@
 	      <child>
 		<widget class="GtkLabel" id="info_title_label">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="no">&lt;big&gt;&lt;b&gt;Title&lt;/b&gt;&lt;/big&gt;</property>
+		  <property name="label">&lt;big&gt;&lt;b&gt;Title&lt;/b&gt;&lt;/big&gt;</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -196,7 +196,7 @@
 	      <child>
 		<widget class="GtkLabel" id="info_description_label">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="no">&lt;i&gt;Description&lt;/i&gt;</property>
+		  <property name="label">&lt;i&gt;Description&lt;/i&gt;</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -322,8 +322,7 @@
 			  <property name="invisible_char">*</property>
 			  <property name="activates_default">False</property>
 			  <property name="width_chars">25</property>
-			  <signal name="changed" handler="_on_game_name_edited" last_modification_time="Sun, 24 Dec 2006 08:03:26 GMT"/>
-			  <signal name="changed" handler="_on_properties_changed" last_modification_time="Sun, 24 Dec 2006 08:03:07 GMT"/>
+			  <signal name="changed" handler="_on_game_name_edited" last_modification_time="Thu, 08 Nov 2007 04:39:37 GMT"/>
 			</widget>
 			<packing>
 			  <property name="left_attach">2</property>
