@@ -1,6 +1,7 @@
 2007-11-08  Robert Ancell  <robert.ancell@gmail.com>
 
 	* lib/main.py: If no game on startup start default game of human vs AI (Bug #446950)
+        * lib/gtkui/dialogs.py: Fix overzealous game name autogeneration (Bug #479445)
 
 2007-11-02  Robert Ancell  <robert.ancell@gmail.com>
 
